fix(history): wrap long content in history
Changes the old non-standard `word-wrap` to `overflow-wrap` and uses the `anywhere` value to wrap more aggresively in case of very long words

--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -612,7 +612,7 @@ form + .login-label {
   border-radius: 0 5px 5px 5px;
   background-color: #e5f0f2;
   padding: 8px 10px;
-  word-wrap: break-word;
+  overflow-wrap: anywhere;
 }
 .comment-content blockquote {
   border-left: 5px solid #ddd;
